# Proyecto-Fundamentos-de-Robotica

proyecto/: CMakeLists.txt  package.xml
proyecto/src/: prfuncs.py  test_diff_kine  test_fkine
robot_description/: package.xml
robot_description/config/: config.rviz  joint_names_edo_sim.yaml
robot_description/launch/: display.launch  display_sliders.launch  gazebo.launch
robot_description/urdf/: robot_description.urdf
